--- a/pixi.toml
+++ b/pixi.toml
@@ -27,3 +27,6 @@ requests = ">=2.32.5, <3"
 marisa-trie = ">=1.3.1, <2"
 leb128 = ">=1.0.8, <2"
 matplotlib = ">=3.10.6, <4"
+html2image = ">=2.0.7, <3"
+pyqt5 = ">=5.15.11, <6"
+patch = ">=1.16, <2"
