--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,9 @@ dscan:
   font_thickness: 1
   hotkey_transparency: alt+shift+f
   hotkey_mode: alt+shift+m
+  stats_provider: zkill
+  rate_limit_retry_delay: 5
+  aggregated_mode_threshold: 300
   ignore_alliances: []
   ignore_corps: []
   timeout: 10
