--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ dscan:
   font_thickness: 1
   hotkey_transparency: alt+shift+f
   hotkey_mode: alt+shift+m
-  stats_provider: evekill 
+  stats_provider: zkill
   rate_limit_retry_delay: 5
   aggregated_mode_threshold: 50
   ignore_alliances: []
