--- a/config.yaml
+++ b/config.yaml
@@ -19,6 +19,7 @@ dscan:
   transparency: 180
   transparency_color: [64, 64, 64]
   transparency_on: true
+  hover_color: [80, 80, 255] 
   groups:
     blue:
       entities: [The Initiative.]
