--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "leb128>=1.0.8,<2",
     "loguru>=0.7.3,<0.8",
     "dearpygui>=2.1.1,<3",
+    "fastapi>=0.115.0,<1",
+    "uvicorn>=0.34.0,<1",
 ]
 
 [tool.pixi.project]
